--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     while long-term goals, like retirement savings or education,
     may take decades. Identifying these goals can motivate sticking
     to your budget, making it easier to cut spending.</string>
+    <string name="progress_message">test</string>
 </resources>
